--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ body {
 <body>
 
 <div id="bitki"></div>
+  <div id="yazi" style="opacity:0; transition:2s;">Bokumu ye bunu demek için uğraşmış olabilirim</div>
+
 
 <script>
 let asama = 0;
@@ -62,3 +64,4 @@ bitki.onclick = () => {
 
 </body>
 </html>
+
