--- a/index.html
+++ b/index.html
@@ -7,35 +7,49 @@
 <style>
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 400vh;
-  background: #eaf7ea;
+  height: 100vh;
+  background: #000;
   font-family: Arial;
 }
 
 #bitki {
-  width: 160px;
-  height: 320px;
+  width: 120px;
+  height: 240px;
   background: green;
-  border-radius: 80px 80px 20px 20px;
-  transition: all 8s ease;
+  border-radius: 60px 60px 20px 20px;
+  transition: all 3s ease;
   cursor: pointer;
   position: relative;
 }
 
+/* büyüme */
 .buyuk {
-  width: 240px;
-  height: 600px;
+  width: 180px;
+  height: 420px;
   background: darkgreen;
 }
 
+/* çiçek */
 .cicek::after {
   content: "🌸";
-  font-size: 200px;
+  font-size: 160px;
   position: absolute;
-  top: -180px;
-  left: -20px;
+  top: -140px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+/* yazı */
+#yazi {
+  margin-top: 40px;
+  font-size: 32px;
+  color: #ffffff;
+  text-shadow: 0 0 10px rgba(255,255,255,0.6);
+  opacity: 0;
+  transition: opacity 2s ease;
 }
 </style>
 </head>
@@ -43,12 +57,12 @@ body {
 <body>
 
 <div id="bitki"></div>
-  <div id="yazi" style="opacity:0; transition:2s;">Bokumu ye bunu demek için uğraşmış olabilirim</div>
-
+<div id="yazi">Bu benim notum 🌸</div>
 
 <script>
 let asama = 0;
 const bitki = document.getElementById("bitki");
+const yazi = document.getElementById("yazi");
 
 bitki.onclick = () => {
   if (asama === 0) {
@@ -57,6 +71,7 @@ bitki.onclick = () => {
   } 
   else if (asama === 1) {
     bitki.classList.add("cicek");
+    yazi.style.opacity = 1;
     asama++;
   }
 };
@@ -64,4 +79,3 @@ bitki.onclick = () => {
 
 </body>
 </html>
-
